plugins {
    id 'org.springframework.boot' version '2.7.13'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
    id 'war'
}

war {
    manifest {
        attributes 'Main-Class': 'com.example.newhisolve.NewHisolveApplication'
    }
}


group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starter Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot Starter Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Spring Boot Starter Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL Connector
    implementation 'mysql:mysql-connector-java:8.0.27'

    // Spring Boot Starter Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JUnit 5 (JUnit Jupiter)
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    // Spring Boot Starter Test (JUnit 5 포함)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Spring Security Test
    testImplementation 'org.springframework.security:spring-security-test'

    // BCrypt Password Encoder
    implementation 'org.springframework.security:spring-security-crypto'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // SpringDoc OpenAPI (Swagger 대체)
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'

    // Apache POI for Excel handling
    implementation 'org.apache.poi:poi-ooxml:5.2.2'
}

test {
    useJUnitPlatform()
}
